[package]
name = "motion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1.0"

protocol = { path = "./protocol" }

[profile.release]
lto = "fat"
codegen-units = 1
# strip = "symbols"
# strip = "debuginfo"
